--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "build:skip-types": "vite build",
+    "build": "tsc -b && npx vite build",
+    "build:skip-types": "npx vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "serve -s dist -l $PORT"
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/three": "^0.178.1",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
@@ -23,19 +24,18 @@
     "react-hook-form": "^7.60.0",
     "serve": "^14.2.4",
     "tailwindcss": "^3.4.17",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.6"
+    "typescript-eslint": "^8.35.1"
   }
 }
