--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/three": "^0.178.1",
+    "@use-gesture/react": "^10.3.1",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "html2canvas": "^1.4.1",
